@@ -3,7 +3,16 @@ Version 0.9.2
 ===============
 
 * API change Serializable.deserialize now return a boolean
+
 * API change SerializableCollection: added new abstract methods
+
+* SerializableCollection: SerializableArrayList now support enable/disable deserialization
+  for post operation using SerializableCollection.deserialize_children() initial document
+  load time optimization
+
+* More memory optimizations: SerializableCollection implementations don't hold
+  objects for unknown properties and nodes
+
 
 
 ===============
